--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,7 @@ h1 h2 h3 {
 #welcome-section h1{
     font-size: 2em;
     text-align: center;
-    padding-right: 175px;
+    padding-right: 200px;
     line-height: 1.5em;
 }
 
@@ -238,8 +238,9 @@ footer .content-wrapper {
 
     #welcome-section h1 {
         font-size: 5em;
-        padding-top: 100px;
-        padding-left: 15px;
+        padding-top: 75px;
+        padding-left: 0;
+        padding-right: 500px;
     }
 
     #projects p {
