Added padding to projects

--- a/css/main.css
+++ b/css/main.css
@@ -243,6 +243,10 @@ footer .content-wrapper {
         padding-right: 500px;
     }
 
+    #projects {
+        padding: 10px;
+    }
+
     #projects p {
         font-size: 1.5em;
     }
